# cineCS-preview

./: .gitignore  CLAUDE.md  README.md  build-exe.ps1  cine-preview.spec  pyproject.toml
src/cine_preview/: __init__.py  __main__.py  gui.py  pipeline.py
src/cine_preview/bruker/: __init__.py  params.py  raw.py  reader.py  scan.py
src/cine_preview/reconstruction/: __init__.py  coil_combination.py  compressed_sensing.py  kspace.py
