[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "cine-preview"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.9", "ruff>=0.4"]
build = ["pyinstaller>=6.0"]

[project.scripts]
cine-preview = "cine_preview.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
